k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: mystic-trading
  labels:
    name: mystic-trading
    app: mystic-trading-platform
