k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mystic-trading-service
  namespace: mystic-trading
  labels:
    app: mystic-trading
    component: app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: mystic-trading
    component: app
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: mystic-trading
  labels:
    app: mystic-trading
    component: redis
spec:
  type: ClusterIP
  ports:
  - port: 6379
    targetPort: 6379
    protocol: TCP
    name: redis
  selector:
    app: mystic-trading
    component: redis
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: mystic-trading
  labels:
    app: mystic-trading
    component: postgres
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
    name: postgres
  selector:
    app: mystic-trading
    component: postgres
